# PyConHK2024-PyTorch-Lightning

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: main.yml
notebooks/: lightning_exploration.ipynb  torch_regression.ipynb
src/: README.md  pyproject.toml  requirements.txt
src/demo/: constants.py  env.py  logger.py
src/demo/lightning/callbacks/: slack.py
src/demo/lightning/dataloaders/: imageloader.py
src/demo/lightning/models/: __init__.py  linear_regression.py  resnet.py
src/demo/slack/: client.py
src/demo/torch/: utils.py
src/demo/torch/models/: __init__.py  linear_regression.py
src/notebooks/: 01_regression_model.ipynb  02_resnet.ipynb
