[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
maintainers = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
homepage = "https://github.com/wyhwong/PyConHK2024-torch-lightning"
repository = "https://github.com/wyhwong/PyConHK2024-torch-lightning"
license = "MIT"
readme = "README.md"
keywords = ["python"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
lightning = "^2.4.0"
tensorboard = "^2.17.0"
torch-tb-profiler = "^0.4.3"
ipykernel = "^6.29.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.group.cuda.dependencies]
torch = {version = "^2.4.0+cu124", source = "pytorch-cuda"}
torchvision = {version = "^0.19.0+cu124", source = "pytorch-cuda"}

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_after_imports = 2

[tool.bandit]
exclude_dirs = ["tests",]

[tool.mypy]
exclude = ["tests",]

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"
